mdm_Location/MDM_Location/src/objects/MDM_Location_Statistic__c.object
<CustomObject>
    <description>This is the code for this measure on the object</description>
    <fields>
        <fullName>Count__c</fullName>
        <description>Count or measure Example number of banners  100</description>
        <inlineHelpText>Count or measure Example number of banners  100</inlineHelpText>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CustomObject__c</fullName>
        <description>List all custom objects</description>
        <inlineHelpText>List all custom objects</inlineHelpText>
        <label>CustomObject</label>
        <picklist>
            <picklistValues>
                <fullName>MDM_Location</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MDM_Location_Stage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MDM_GRID_X_SourceID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MDM_Banner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MDM_OwningCompany</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MDM_TradeChannel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MDM_TradeSubChannel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MDM_Country</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MDM_State</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MDM_Source</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MeasureCode__c</fullName>
        <description>Count or measure code Example number of banners NO_OF_BANNERS</description>
        <inlineHelpText>Count or measure code Example number of banners NO_OF_BANNERS</inlineHelpText>
        <label>MeasureCode</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>MDM_Location_Statistic</label>
    <listViews>
        <fullName>All</fullName>
        <columns>CREATED_DATE</columns>
        <columns>Count__c</columns>
        <columns>CustomObject__c</columns>
        <columns>MeasureCode__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>Filter 1</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MDM_Location_Statistics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>